--- a/examples/pipe_config.yaml
+++ b/examples/pipe_config.yaml
@@ -2,17 +2,18 @@ pipeline:
     run_number: 0
     log_dir: logging
     repo_dir: repo
+    fits_dir: fits
+    bands: ugrizy
     dry_run: False
 
 stages:
     imsim:
-        fits_dir: fits
         psf: Kolmogorov
         disable_sensor_model: True
 #        sensors: "R:2,2 S:0,0^R:2,2 S:0,1^R:2,2 S:1,0^R:2,2 S:1,1"
         sensors: "R:2,2 S:1,1"
         processes: 1
-        instcat_dir: /home/sims_ci_pipe/work/simulation_pipeline/instcats
+        instcat_dir: default
 
     ingest_images:
         CALIB: /home/Run2.1i/CALIB
@@ -20,7 +21,7 @@ stages:
         calibrations: /home/Run2.1i/calibrations
 
     process_ccds:
-        processes: 32
+        processes: 1
 
     sfp_validation:
         opsim_db: /home/DC2/minion_1016_desc_dithered_v4.db
